update the note